<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="preference_url"
        app:title="@string/preference_url"
        app:defaultValue="https://follow.calindora.com" />
    <EditTextPreference
        app:key="preference_device_key"
        app:title="@string/preference_device_key"
        app:defaultValue="" />
    <EditTextPreference
        app:key="preference_device_secret"
        app:title="@string/preference_device_secret"
        app:defaultValue="" />
    <SwitchPreference
        app:key="preference_cancel_on_failure"
        app:title="@string/preference_cancel_on_failure" />
    <PreferenceCategory app:title="@string/preference_category_status">
        <Preference
            app:key="preference_credential_status"
            app:title="@string/preference_credential_status"
            app:summary="@string/preference_credential_status_ok" />

        <Preference
            app:key="preference_reset_credential_block"
            app:title="@string/preference_reset_credential_block"
            app:summary="@string/preference_reset_credential_block_summary"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>
</PreferenceScreen>
